fixed broken margins and horizontal scroll

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,6 +4,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  overflow: scroll;
 }
 
 header {
@@ -579,7 +580,7 @@ footer {
 }
 
 footer > .container-fluid {
-  padding: 0 10px;
+  padding: 0 20px;
 }
 
 .footer-p {
@@ -669,9 +670,24 @@ footer > .container-fluid {
   .main-news {
     display: block;
   }
+
+  .container-fluid {
+    width: 100% !important;
+    padding: 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .row {
+    margin: 0;
+  }
 }
 
 @media (min-width: 319px) and (max-width: 1200px) {
+  .main-news {
+    padding: 0;
+  }
+
   .signup-content {
     text-align: center;
   }
@@ -702,13 +718,6 @@ footer > .container-fluid {
 
   .first-col-mobile {
     margin-top: 1rem;
-  }
-
-  .container-fluid {
-    width: 100% !important;
-    padding: 0;
-    margin-right: auto;
-    margin-left: auto;
   }
 
   .desktop {
